k8s/strategies/shadow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-shadow
  namespace: aceest
  labels:
    app: aceest
    version: v2
    role: shadow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aceest
      role: shadow
  template:
    metadata:
      labels:
        app: aceest
        version: v2
        role: shadow
    spec:
      containers:
        - name: app
          image: YOUR_DOCKERHUB_USER/aceest-fitness:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet: { path: /health, port: 5000 }
            initialDelaySeconds: 3
            periodSeconds: 5
