k8s/strategies/ab-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest-v1
  namespace: aceest
spec:
  type: ClusterIP
  selector:
    app: aceest
    version: v1
  ports:
    - name: http
      port: 80
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: aceest-v2
  namespace: aceest
spec:
  type: ClusterIP
  selector:
    app: aceest
    version: v2
  ports:
    - name: http
      port: 80
      targetPort: 5000
