k8s/strategies/blue-green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest-live
  namespace: aceest
  labels:
    app: aceest
    role: live
spec:
  type: NodePort
  selector:
    app: aceest
    version: v1
  ports:
    - name: http
      port: 80
      targetPort: 5000
      nodePort: 30081
