k8s/strategies/shadow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest-shadow
  namespace: aceest
spec:
  type: ClusterIP
  selector:
    app: aceest
    role: shadow
  ports:
    - name: http
      port: 80
      targetPort: 5000
