k8s/strategies/ab-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aceest-stable
  namespace: aceest
spec:
  ingressClassName: nginx
  rules:
    - host: aceest.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aceest-v1
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aceest-canary
  namespace: aceest
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "X-User-Group"
    nginx.ingress.kubernetes.io/canary-by-header-value: "beta"
spec:
  ingressClassName: nginx
  rules:
    - host: aceest.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aceest-v2
                port:
                  number: 80
